2005-09-16  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Mark 4408 as resolved.

2005-09-16  Carl Worth  <cworth@cworth.org>

	Tested by: John Ellson
	Closes bug #4408
	https://bugs.freedesktop.org/show_bug.cgi?id=4408

	* src/cairo-path-stroke.c: (_cairo_stroker_curve_to_dashed),
	(_cairo_path_fixed_stroke_to_traps): Add support for dashed
	splines. (The antialiasing quality isn't perfect, but at least the
	curves are dashed now).

2005-09-16  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Mark 4260 as resolved. Add 4414 to the 1.0.2 roadmap.

2005-09-14  David Reveman  <davidr@novell.com>

	* src/cairo-glitz-surface.c: Track changes to glitz.
	Update glyph caching.
	(_glitz_operator): Change Carl's comment about saturate operator.

2005-09-13  Carl Worth  <cworth@cworth.org>

	* src/cairo-scaled-font.c (_cairo_scaled_font_text_to_glyphs): Set
	return-value *glyphs to NULL after freeing it in the error case.

2005-09-13  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Mark bug #4299 fixed (by the several lock-related
	commits below). Add clip-all XFAIL to the 1.0.2 roadmap.

2005-09-13  Carl Worth  <cworth@cworth.org>

	* src/cairo-scaled-font.c: (_cairo_scaled_glyph_lookup): Add
	missing locking around the call into the thread-shared cache here.

2005-09-13  Carl Worth  <cworth@cworth.org>

	* test/pthread-show-text.c: (start), (main): Adjust parameters to
	stress things a bit more, (better exposing another locking bug).

2005-09-13  Carl Worth  <cworth@cworth.org>

	* src/cairo-scaled-font.c: (cairo_scaled_font_reference),
	(cairo_scaled_font_destroy): Expand locking to encapsulate any
	modification to the reference count of a scaled font, rather than
	just modifcations of the scaled_font_map, since scaled fonts are
	shared between threads.

2005-09-13  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.h: Add documentation for cairo_test functions.
	
	* test/cairo-test.c: (cairo_test_init), (cairo_test_expecting):